# dip721-nft-container

./: .gitignore  Cargo.toml  LICENSE  README.md  bashscript.sh  canister_ids.json  dfx.json  env_template  package-lock.json  package.json  webpack.config.js  webpack.configTsTry
src/dip721_nft_container/: Cargo.toml  dip721-nft-container.did
src/dip721_nft_container/src/: http.rs  lib.rs
src/hello/: Cargo.toml  hello.did  lib.rs
src/hello_frontend/src/: index.html  index.js
src/node/: identity.js  index11.js  index11a.js  index12.js  nfts.json
