[package]
name = "dip721_nft_container"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
include-base64 = "0.1"
serde = { version ="1.0.152", features = ["derive"] }
percent-encoding = "2.2.0"
ic-certified-map= "0.3.2"
sha2 = "0.10.6"
serde_cbor = "0.11.2"

[lib]
crate-type = ["cdylib"]
