[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = { version ="1.0.152", features = ["derive"] }